--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
         <p>
           Our objective is to enable RLVR at scale with <strong>end-to-end automation</strong>, <strong>code-verifiable
             process signals</strong>, and <strong>no human labels</strong>. We therefore synthesize
-          <strong>self-contained executable environments</strong> where each intermediate step can be <em>checked by
+          <strong>self-contained executable environments</strong> where each intermediate step can be <em>verified by
             code sandbox</em>, which makes the pipeline naturally scalable. These environments are then used to roll out
           multi-turn interactions and to derive process-level feedback for subsequent training.
         </p>
