--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <!-- Code Link -->
 
               <span class="link-block">
-                <a href="https://github.com/autoplanx/autoplanx" target="_blank" rel="noopener noreferrer"
+                <a href="https://github.com/LianjiaTech/astra" target="_blank" rel="noopener noreferrer"
                   class="external-link custom-link">
                   <span class="icon">
                     <i class="fab fa-github"></i>
@@ -186,7 +186,7 @@
               <span class="link-separator">|</span>
               <!-- HF Dataset Link -->
               <span class="link-block">
-                <a href="https://huggingface.co/datasets/autoplanx" target="_blank" rel="noopener noreferrer"
+                <a href="https://huggingface.co/collections/Emperorizzis/astra-dataset" target="_blank" rel="noopener noreferrer"
                   class="external-link custom-link">
                   <span class="icon">
                     <i class="fas fa-database"></i>
@@ -197,7 +197,7 @@
               <span class="link-separator">|</span>
               <!-- HF Model Link -->
               <span class="link-block">
-                <a href="https://huggingface.co/autoplanx" target="_blank" rel="noopener noreferrer"
+                <a href="https://huggingface.co/collections/Emperorizzis/astra-models" target="_blank" rel="noopener noreferrer"
                   class="external-link custom-link">
                   <span class="icon">
                     <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" width="24"
