--- a/index.html
+++ b/index.html
@@ -209,12 +209,11 @@
               <span class="link-separator">|</span>
               <!-- Paper Link -->
               <span class="link-block">
-                <a href="#" class="external-link custom-link" aria-disabled="true" tabindex="-1"
-                  title="Paper coming soon" style="opacity: 0.5; cursor: default;">
+                <a href="https://arxiv.org/pdf/2601.21558" class="external-link custom-link" target="_blank">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper (Coming Soon)</span>
+                  <span>Paper</span>
                 </a>
               </span>
             </div>
