--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <span class="link-block">
                 <a href="https://arxiv.org/pdf/2601.21558" class="external-link custom-link" target="_blank">
                   <span class="icon">
-                    <i class="fas fa-file-pdf"></i>
+                    <i class="fas fa-file-pdf" style="color: #e53935;"></i>
                   </span>
                   <span>Paper</span>
                 </a>
